# Distributed_rust

./: CONTRIBUTING.md  Cargo.toml  DEPENDENCY_SYNC_SUMMARY_2025.md  DEPENDENCY_UPDATE_REPORT_2025.md  DEPENDENCY_VERSION_REPORT_2025.md  DEVELOPMENT_GUIDE_2025.md  PERFORMANCE_ANALYSIS_2025.md  PROJECT_IMPROVEMENT_SUMMARY_2025.md  PROJECT_OVERVIEW_2025.md  README.md  TESTING_GUIDE_2025.md  分析总结_2025-10-17.md  分析报告导航_2025-10-17.md
distributed/: Cargo.toml  FINAL_IMPROVEMENT_REPORT_2025.md  IMPROVEMENT_SUMMARY_2025.md  PROJECT_REORGANIZATION_REPORT_2025.md  README.md
distributed/benches/: ack_distribution.rs  ack_distribution_criterion.rs  performance_comprehensive.rs
distributed/docs/: ACTION_PLAN_TIMELINE_2025.md  AUDIT_CHECKLIST.md  COMPREHENSIVE_ANALYSIS_REPORT_2025-10-17.md  COMPREHENSIVE_INDEX.md  CONCEPT_MODEL.md  DOCUMENTATION_COMPLETION_REPORT_2025-10-17.md  DOCUMENTATION_OVERHAUL_REPORT_2025.md  EXPERIMENT_GUIDE.md  FAQ.md  FORMAL_ARGUMENTS.md  INDEX.md  INSTALL.md  LEARNING_GUIDE.md  PITFALLS.md  PROGRESS_REPORT_2025-10-17.md  QUICKSTART.md  README.md  ROADMAP.md  STYLE_GUIDE.md
distributed/docs/consensus/: README.md  byzantine_fault_tolerance.md  leader_election.md  log_replication.md
distributed/docs/consistency/: README.md  cap_pacelc.md  monotonic_consistency.md  session_consistency.md  vector_clocks.md
distributed/docs/design/: BEST_PRACTICES.md  README.md  architecture_patterns.md  configuration.md  deployment.md  development_setup_guide.md  error_handling.md  monitoring.md  performance.md  performance_optimization_guide.md  read_index_design.md  rocksdb_integration_design.md  security.md
distributed/docs/examples/: README.md
distributed/docs/experiments/: CHECKLIST.md  README.md
distributed/examples/: comprehensive_demo.rs  e2e_chaos_min.rs  e2e_discovery_lb_config.rs  e2e_governance_min.rs  e2e_load_balancer_min.rs  e2e_replication.rs  e2e_saga.rs
distributed/src/: codec.rs  errors.rs  lib.rs  load_balancing.rs  partitioning.rs  replication.rs  scheduling.rs  service_discovery.rs  swim.rs  topology.rs  transactions.rs  transport.rs
distributed/tests/: basic.rs  byzantine_fault_tolerance_tests.rs  cap_theorem_tests.rs  chaos_tests.rs  consistency_tests.rs  enhanced_swim_tests.rs  hashring.rs  hashring_properties.rs  integration_comprehensive.rs  integration_tests.rs  pipeline.rs  placement_idem.rs  prop_replication.rs  prop_swim.rs  quorum_composite.rs  raft.rs  raft_commit.rs  raft_log.rs  raft_read.rs  raft_snapshot.rs  raft_state.rs  replication_local.rs  replication_quorum.rs  retry.rs  retry_backoff.rs  router.rs  saga.rs  service_discovery_tests.rs  swim_convergence.rs  swim_pingreq.rs  swim_repl.rs  swim_round.rs  swim_view.rs
solutions/foundations-datafusion/: Cargo.toml
(+62 files in other folders)
